* Thu 13 Jan 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.5dev
  Use pselect when it's available to cut down on wakeups and improve
  signal handling.  New PPS message exporting clock drift.

* Thu 12 Jan 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.4
  Don't barf when chrpath is not available, fall back to static linking;
  helps people not running Linux.

* Sat Oct 29 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.3
  Improvements to build and release-procedure documentation. Make
  sirf=no build work again. Main reason for this release is to make
  chrpath a mandatory build depedency and explain why in the build
  documentation.

* Wed Oct 25 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.2 
  In the build recipe, (1) set pkgconfig properly for 64-bit Fedora
  systems, (2) clean up various derived files including *.pyc on scons
  -c, (3) add an option to disable stripping of binaries (strip=no),
  (4) for embedded targets, add an option to disable building Python
  support (python=no), (5) make the help for gpsd_group and gpsd_user
  a little clearer, (6) add a force_global option to build gpsd to
  listen to all addresses (rather than just loopback). The packet
  sniffer now accepts NMEA packets with the ECDIS packet leader 'EC'.
  SBAS satellites are now properly use-flagged in SiRF and UBX
  skyviews.  The -G option now works under IPv6. Cross-build is now
  officially supported and instructions included.  gpsprof works again
  and does whole-cycle profiling. gpsd.php has Open Street Map
  support.  The pp-on-cts option is replaced by a pps_pin option that
  lets you specify the pin; the default is still DCD. New supported
  device; the Jackson Labs Fury. The chrpath utility has become a
  build prerequisite.

* Sun Aug 28 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.1
  The Irene release, rocking you like a hurricane and brought to you
  from the storm shelter in my basement. This is a snap release mainly