@@ -241,13 +241,20 @@ struct gps_context_t {
 #endif
 };
 
+
+struct aivdm_type24a_t {
+    unsigned int mmsi;
+    char shipname[AIS_SHIPNAME_MAXLEN+1];
+};
+#define MAX_TYPE24_INTERLEAVE	8	/* max number of queued type 24s */
+
 struct aivdm_context_t {
     /* hold context for decoding AIDVM packet sequences */
     int decoded_frags;		/* for tracking AIDVM parts in a multipart sequence */
     unsigned char bits[2048];
     size_t bitlen; /* how many valid bits */
-    unsigned int mmsi24; /* type 24 specific */
-    char shipname24[AIS_SHIPNAME_MAXLEN+1]; /* type 24 specific */
+    struct aivdm_type24a_t type24names[MAX_TYPE24_INTERLEAVE];
+    int type24_index;
 };
 
 #define MODE_NMEA	0
