@@ -1,6 +1,6 @@
 = AIVDM/AIVDO protocol decoding =
 Eric S. Raymond <esr@thyrsus.com>
-v1.34, February 2012
+v1.35, March 2012
 
 This document is mastered in asciidoc format.  If you are reading it in HTML,
 you can find the original at the GPSD project website
@@ -3872,11 +3872,14 @@ during the quiet period.
 Equivalent of a Type 5 message for ships using Class B equipment.  Also
 used to associate an MMSI with a name on either class A or class B equipment.
 
-A"Type 24" may be in part A or part B format; either is 168 bits.
-Parts A and B are expected to be broadcast in adjacent pairs.  The
-interpretation of some fields in Type B format changes depending on
-the range of the Type B MMSI field. 160 bits for part A, 168 bits for
-part B.
+A "Type 24" may be in part A or part B format; either is 168 bits.
+According to the standard, parts A and B are expected to be broadcast
+in adjacent pairs; in the real world they may (due to quirks in
+various aggregation methods) be separated by other sentances or even
+interleaved with different Type 24 pairs; decoders must cope with
+this.  The interpretation of some fields in Type B format changes
+depending on the range of the Type B MMSI field. 160 bits for part A,
+168 bits for part B.
 
 <<IALA>> does not describe this message type; format information
 is thanks to Kurt Schwehr.
@@ -4518,3 +4521,6 @@ Version 1.33 notes that the home location of "NMEA Revealed" became
 unstable in late 2011.
 
 Version 1.34 fixes a typo in the MMSI 2 firld offset of message 7.
+
+Version 1.35 notes that 24A and 24B messages don't necessarily come
+in neat adjacent pairs.
