@@ -1,6 +1,7 @@
-* Thu 13 Jan 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.5dev
+* Thu 13 Jan 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.5dev 
   Use pselect when it's available to cut down on wakeups and improve
-  signal handling.  New PPS message exporting clock drift.
+  signal handling.  New PPS message exporting clock drift. The AIVDM
+  driver now handles up to 16 interleaved 24A and 24B pair-halves.
 
 * Thu 12 Jan 2012 Eric S. Raymond <esr@snark.thyrsus.com> - 3.4
   Don't barf when chrpath is not available, fall back to static linking;
